fix: fix wrong color in light theme

--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -97,7 +97,7 @@
   --muted: hsl(0 0% 92.1569%);
   --muted-foreground: hsl(0 0% 26.6667%);
   --accent: hsl(246.8919 74% 60.7843%);
-  --accent-foreground: hsl(0 0% 100%);
+  --accent-foreground: hsl(0 0% 8%);
   --danger: hsl(352.6829 50.014% 50.0392%);
   --danger-foreground: hsl(0 0% 8%);
   --border: hsl(0 0% 81.9608%);
